--- a/css/main.css
+++ b/css/main.css
@@ -12,15 +12,66 @@ a {
     text-decoration: none;
 }
 
-#clearfix::after{
+#clearfix::after {
     display: block;
     content: "";
     clear: both;
     overflow: hidden;
 }
 
-
 /* reset样式结束 */
+
+#bg {
+    background: url('../images/banner.jpg') center center no-repeat;
+    background-size: 100% auto;
+}
+
+#bg-shadow {
+    background: rgba(0, 0, 0, 0.2)
+}
+
+#top {
+    width: 100%;
+    background: #000000;
+    margin: 0 auto;
+}
+
+.top-content {
+    width: 85%;
+    height: 65px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.top-logo {
+    height: 65px;
+    width: 200px;
+    background: url('../images/logo.png') center no-repeat;
+}
+
+.top-list {
+    position: absolute;
+    top: 0;
+    right: 80px;
+}
+
+.top-list ul li {
+    float: left;
+    line-height: 60px;
+}
+
+.top-list ul li a:hover {
+    border-bottom: 2px solid #148fb4;
+    color: #148fb4;
+}
+
+.top-list ul li a {
+    color: #cccccc;
+    padding: 0 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* top样式结束 */
 
 #box {
     width: 100%;
@@ -30,7 +81,7 @@ a {
 .box-list {
     width: 810px;
     height: 400px;
-    margin: 70px auto;
+    margin: 20px auto;
 }
 
 .box-list-icon {
@@ -40,41 +91,66 @@ a {
     border: 1px solid #000000;
     cursor: pointer;
 }
-.box-list-icon:nth-child(1){
-    background: #f44336;
-}
-.box-list-icon:nth-child(2){
-    background: #8bc34a;
-}
-.box-list-icon:last-child{
-    background: #ff9800;
-}
+
 .box-list-icon h3 {
     display: block;
+    width: 65px;
+    height: 50px;
     line-height: 130px;
+    color: #ffffff;
+    margin: 10px auto 0;
     text-align: center;
     font-family: '方正舒体';
     font-weight: 800;
-    font-size: 20px;    
+    font-size: 20px;
+    background: #000000;
 }
-#content-box{
+
+.box-list-icon:nth-child(1) {
+    background: #f44336;
+}
+
+.box-list-icon:nth-child(2) {
+    background: #8bc34a;
+}
+
+.box-list-icon:last-child {
+    background: #ff9800;
+}
+
+#content-box {
     background: #8bc34a85;
     height: 136px;
     width: 808px;
     box-shadow: 2px 2px 5px 0px #000;
 }
-.text-box{
+
+.text-box {
     width: 810px;
     height: 136px;
     overflow: hidden;
     display: none;
 }
 
-.text-content{
+.text-content {
     text-align: center;
-    color:#000;
+    color: #000;
     padding: 38px 0px;
     text-indent: 2em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     overflow: hidden;
+}
+
+/* footer */
+
+#footer {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.foot-content {
+    width: 100%;
+    height: 200px;
+    background: #8bc34a;
+    color: #000000;
 }
