--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ a {
 }
 
 #bg-shadow {
-    background: rgba(0, 0, 0, 0.2)
+    background: rgba(0, 0, 0, 0.3)
 }
 
 #top {
@@ -192,6 +192,7 @@ a {
     color: #cccccc;
     font-weight: 600;
     cursor: pointer;
+    font-size: 15px;
     
 }
 
